# aws-cdk-examples

./: .gitignore
add-base-path-mapping-into-existing-custom-domain-example/: .gitignore  cdk.context.json  cdk.json  package.json
add-base-path-mapping-into-existing-custom-domain-example/lib/: app-stack.ts  infrastructure-stack.ts
api-gateway-websocket-api-example/: package.json
api-gateway-websocket-api-example/lib/: app-stack.ts
api-gateway-websocket-api-example/src/: api-lambda.ts  ws-connect-lambda.ts  ws-disconnect-lambda.ts
api-gw-cross-account-access-iam-auth/: package.json  response.json
api-gw-cross-account-access-iam-auth/lib/: api-stack.ts  client-stack.ts
api-gw-cross-account-access-iam-auth/src/: client-account-lambda.ts  order-api-lambda.ts
authorization-code-flow/: README.md  app.py  package.json  pyproject.toml  tsconfig.eslint.json
authorization-code-flow-aws-cdk/: cdk.json
authorization-code-flow-aws-cdk/lib/: auth_code_flow_stack.py
authorization-code-flow/lib/: api-gateway-stack.ts  api_gateway_stack.py  auth-code-flow-stack.ts  cognito-stack.ts  cognito_stack.py
client-credentials-flow/: README.md  app.py  package.json
client-credentials-flow-aws-cdk/: .gitignore  README.md  pyproject.toml
client-credentials-flow-aws-cdk/lib/: api_gateway_stack.py  auth_code_flow_stack.py
cognito-user-pool/: .gitignore  README.md  app.py  package.json
cognito-user-pool-cdk-example/: cdk.context.json  pyproject.toml
cognito-user-pool-cdk-example/lib/: cognito_userpool_stack.py
lambda-authorizer-example/: package.json
(+10 files in other folders)
